--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,20 @@
   <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
-  <ul id='messages'></ul>
-  <input type="text" id="message-input">
-  <button id='pingButton'>Enviar</button>
+  <section>Usuários online:
+    <ul id="online-users">
+      <% clients.forEach(({ id, nickname }) => { %>
+        <li id="<%= id %>" data-testid="online-user"><%= nickname || id %></li>
+      <% }) %>
+    </ul>
+    <input type="text" id="nickname-input" data-testid="nickname-box">
+    <button id='nickname-button' data-testid="nickname-button">Mudar</button>
+  </section>
+  <section>Mensagens
+    <ul id='messages'></ul>
+    <input type="text" id="message-input" data-testid="message-box" >
+    <button id='send-button' data-testid="send-button">Enviar</button>
+  </section>
   <script src="/script.js"></script>
 </body>
 </html>
