--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,30 +1,20 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+body {
+  flex-direction: column;
 }
 
-form {
-  background: black;
-  bottom: 0;
-  padding: 3px;
-  position: fixed;
-  width: 100%;
+.middle-items {
+  flex-flow: row wrap;
+  align-items: center;
 }
 
-form input {
-  border: 0;
-  margin-right: 0.5%;
-  padding: 10px;
-  width: 90%;
+.side-intems {
+  flex-flow: column wrap; 
 }
 
-form button {
-  background: rgb(130, 224, 255);
-  border: none;
-  cursor: pointer;
-  padding: 10px;
-  width: 9%;
+.user-list {
+  height: 60px;
+  width: 80px;
+  background-color: beige;
 }
 
 .chat {
