--- a/views/webchat.ejs
+++ b/views/webchat.ejs
@@ -14,7 +14,7 @@
   <br />
   <form>
     <input data-testid='nickname-box' id="nameBox" placeholder="Nickname" />
-    <button data-testid='nickname-button' id='changeNameBtn' type="button">Change Name</button>
+    <button data-testid='nickname-button' id='changeNameBtn'>Change Name</button>
   </form>
   <ul id="messageList">
     <% messages.forEach((msg) => { %>
@@ -23,7 +23,7 @@
   </ul>
   <form>
     <input data-testid='message-box' id='messageBox' placeholder="Message"/>
-    <button data-testid='send-button' id='sendButton' type="button" >Enviar</button>
+    <button data-testid='send-button' id='sendButton'>Enviar</button>
   </form>
   <h3 id="myNickName" data-testid="online-user"></h3>
   <h2>Online Friends:</h2>
@@ -54,30 +54,61 @@
   });
 
   client.on('connection', (clientId) => {
-    if (sessionStorage.getItem('webChatNickname')) {
-      document.querySelector('#myNickName').innerText = sessionStorage
-        .getItem('webChatNickname');
+    const storage = sessionStorage.getItem('webChatNickname');
+    const nickNameH = document.querySelector('#myNickName')
+    if (storage) {
+      nickNameH.innerText = storage;
+      client.emit('registeredUser', { data: true });
     } else {
-      document.querySelector('#myNickName').innerText = clientId;
+      nickNameH.innerText = clientId;
+      sessionStorage.setItem('webChatNickname', clientId);
+      client.emit('registeredUser', { data: false });
     }
   });
 
-  // client.on('usuarios', (usuarios) => {
-  //   usuarios.forEach((usuario) => {
-  //     const li = document.createElement('li');
-  //     li.innerText = usuario;
-  //     document.querySelector('#onlineContainer').appendChild(li);
-  //   });
-  // });
+  client.on('usuarios', (usuarios) => {
+    const users = document.querySelectorAll('#onlineUser');
+    console.log(users.length);
+    if (users.length === 0) {
+      usuarios.forEach((usuario) => {
+        const li = document.createElement('li');
+        li.innerText = usuario;
+        li.setAttribute('data-testid', 'online-user');
+        li.className = 'onlineUser';
+        document.querySelector('#onlineContainer').appendChild(li);
+      });
+    }
+  });
 
-  document.querySelector('#changeNameBtn').addEventListener('click', () => {
-    newName = document.querySelector('#nameBox').value;
+  client.on('newUser', (useId) => {
+    const li = document.createElement('li');
+    li.innerText = useId;
+    li.setAttribute('data-testid', 'online-user');
+    li.className = 'onlineUser';
+    document.querySelector('#onlineContainer').appendChild(li);
+  });
+
+  document.querySelector('#changeNameBtn').addEventListener('click', (e) => {
+    e.preventDefault();
+    const oldName = sessionStorage.getItem('webChatNickname');
+    const newName = document.querySelector('#nameBox').value;
     document.querySelector('#myNickName').innerText = newName;
     sessionStorage.setItem('webChatNickname', newName);
     document.querySelector('#nameBox').value = '';
+    client.emit('changeName', { oldName: oldName, newName: newName });
   });
 
-  document.querySelector('#sendButton').addEventListener('click', () => {
+  client.on('changeName', (data) => {
+    const nameList = document.querySelectorAll('.onlineUser');
+    nameList.forEach((li) => {
+      if (li.innerText === data.oldName) {
+        li.innerText = data.newName;
+      }
+    });
+  });
+
+  document.querySelector('#sendButton').addEventListener('click', (e) => {
+    e.preventDefault();
     const msg = document.querySelector('#messageBox').value;
     const myClient = document.querySelector('#myNickName').innerText;
     client.emit('message', { chatMessage: msg, nickname: myClient });
