feat: isola scricpts do ejs

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -4,29 +4,16 @@
     <title>WebChat</title>
   </head>
   <body>
-    sdsdasdxxxxxxxxxxxxxx
-    <ul id="mensagensAntigas">
-
+    <ul>
+      <% oldMessages.forEach((oldMessage) => { %>
+        <li><%= oldMessage %></li>
+      <% }) %>
     </ul>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      const socket = io();
-      const oldMessages = document.getElementsById('mensagensAntigas');
-      socket.on('oldMessagesBD',  (oldMessages) => {
-        console.log('eeeeeeeeeeeeeeeeeee')
-        let newEl = document.createElement('li');
-        newEl.innerText = oldMessages;
-        oldMessages.appendChild(newEl);
-    });
+    <script src='./js/chat.js'></script>
 
-    </script>
 
-<ul>
-  <% oldMessages.forEach((oldMessage) => { %>
-    <li><%= oldMessage %></li>
-  <% }) %>
-</ul>
   </body>
 
 </html>
