--- a/public/views/chat.ejs
+++ b/public/views/chat.ejs
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="http://localhost:5000/socket.io/socket.io.js"></script> <!-- O pacote socket.io cria esse arq -->
   <title>Project Chat</title>
 </head>
 <body>
   <h1>Project Chat</h1>
+
+  <script>
+    const socket = io();
+
+  </script>
 </body>
 </html>
