Protocol TCP created

--- a/public/views/chat.ejs
+++ b/public/views/chat.ejs
@@ -11,7 +11,7 @@
   <h1>Project Chat</h1>
 
   <script>
-    const socket = io();
+    const socket = io("http://localhost:5000");
 
   </script>
 </body>
