Connection server to send and receive notification throught route /message

--- a/public/views/chat.ejs
+++ b/public/views/chat.ejs
@@ -13,6 +13,10 @@
   <script>
     const socket = io("http://localhost:5000");
 
+    socket.on('/message', (notification) => {
+      console.log(notification);
+    })
+
   </script>
 </body>
 </html>
