--- a/views/webchat.ejs
+++ b/views/webchat.ejs
@@ -25,8 +25,7 @@
     <input data-testid='message-box' id='messageBox' placeholder="Message"/>
     <button data-testid='send-button' id='sendButton'>Enviar</button>
   </form>
-  <h3 id="myNickName" data-testid="online-user"></h3>
-  <h2>Online Friends:</h2>
+  <h2>Online People:</h2>
   <ul id="onlineContainer">
   </ul>
 </body>
@@ -51,10 +50,8 @@
     const storage = sessionStorage.getItem('webChatNickname');
     const nickNameH = document.querySelector('#myNickName')
     if (storage) {
-      nickNameH.innerText = storage;
       client.emit('registeredUser', { data: true });
     } else {
-      nickNameH.innerText = clientId;
       sessionStorage.setItem('webChatNickname', clientId);
       client.emit('registeredUser', { data: false });
     }
@@ -91,9 +88,8 @@
 
   document.querySelector('#changeNameBtn').addEventListener('click', (e) => {
     e.preventDefault();
-    const oldName = document.querySelector('#myNickName').innerText;
+    const oldName = sessionStorage.getItem('webChatNickname');
     const newName = document.querySelector('#nameBox').value;
-    document.querySelector('#myNickName').innerText = newName;
     sessionStorage.setItem('webChatNickname', newName);
     document.querySelector('#nameBox').value = '';
     client.emit('changeName', { oldName: oldName, newName: newName });
@@ -109,7 +105,6 @@
   });
 
   client.on('disconnected', (disconectedId) => {
-    // ulList = document.querySelector('#onlineContainer');
     itemToRemove = document.querySelector(`#${disconectedId}`);
     document.querySelector('#onlineContainer').removeChild(itemToRemove);
   });
@@ -117,7 +112,7 @@
   document.querySelector('#sendButton').addEventListener('click', (e) => {
     e.preventDefault();
     const msg = document.querySelector('#messageBox').value;
-    const myClient = document.querySelector('#myNickName').innerText;
+    const myClient = sessionStorage.getItem('webChatNickname');
     client.emit('message', { chatMessage: msg, nickname: myClient });
     document.querySelector('#messageBox').value = '';
   });
