--- a/views/formToMessage.ejs
+++ b/views/formToMessage.ejs
@@ -1,6 +1,7 @@
 <h1 id="user" data-testid="online-user"></h1>
 <form>
   <input type="text" data-testid="nickname-box">
+  <button data-testid="nickname-button" type="button" tabindex="-1" style="opacity: 0;"></button>
   <input type="text" data-testid="message-box">
   <button type="submit" data-testid="send-button">Enviar</button>
 </form>
