feat: req 2 - implementa frontend para que as pessoas interajam com o chat

--- a/views/csr.ejs
+++ b/views/csr.ejs
@@ -14,7 +14,7 @@
       <h1>Terezinha Online!</h1>
     </header>
 
-    <!-- <aside>
+    <aside>
       <form>
         <input
           data-testid="nickname-box"
@@ -30,8 +30,8 @@
       </form>
 
       <h3>Pessoas onlines</h3>
-      <ul id="online-user"></ul>
-    </aside> -->
+      <ul id="online-users"></ul>
+    </aside>
 
     <section>
       <div>
