--- a/public/views/chat.ejs
+++ b/public/views/chat.ejs
@@ -16,15 +16,8 @@
     <% }) %>
   </ul>
 
-  <script>
-    const socket = io("http://localhost:3000");
-
-    socket.on('/message', (notification) => {
-      const li = document.createElement('li');
-      const liText = document.createTextNode(notification);
-      li.appendChild(liText);
-      document.getElementById('message').appendChild(li);
-    })
+  <script src='/client.js'>
+    
 
   </script>
 </body>
