--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,58 +1,42 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
-  font: 13px Helvetica, Arial;
-}
-
-#messageForm {
-  background: #000;
-  padding: 3px;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-#nickForm {
-  background: #000;
-  padding: 3px;
-  position: fixed;
-  top: 0;
-  width: 100%;
+  font: 13px sans-serif;
 }
 
 form input {
   border: 0;
+  margin-right: 0.5%;
   padding: 10px;
   width: 90%;
-  margin-right: 0.5%;
 }
 
 form button {
-  width: 9%;
   background: rgb(130, 224, 255);
   border: none;
-  padding: 10px;
   cursor: pointer;
+  padding: 10px;
+  width: 9%;
 }
 
-#messages {
+ul {
+  margin-top: 50px;
+}
+
+ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-#messages li {
+ul li {
   padding: 5px 10px;
 }
 
-#messages li:nth-child(odd) {
+ul li:nth-child( odd ) {
   background: #eee;
-}
-
-#connectedUsers {
-  margin-top: 50px;
 }
