--- a/views/messagesDisplay.ejs
+++ b/views/messagesDisplay.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="./styles/messagesDisplay.css">
 <div id="messagesDisplay"></div>
 
 <script src="./scripts/views/messagesDisplay.js" defer></script>
