fix: online user bug

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h2>Send messages</h2>
-  <p>Nickname: <span id="nickname" data-testid="online-user"><%= randomNickname %></span></p>
+  <p>Nickname: <span id="nickname"><%= randomNickname %></span></p>
   <form id="change-nick-form" action="">
     <input id="nick-input" type="text" data-testid="nickname-box">
     <button type="submit" data-testid="nickname-button">Change Nickname</button>
