--- a/views/messagesDisplay.ejs
+++ b/views/messagesDisplay.ejs
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="./styles/messagesDisplay.css">
-<div id="messagesDisplay"></div>
+<div class="messagesContainer">
+  <div id="messagesDisplay"></div>
+</div>
 
 <script src="./scripts/views/messagesDisplay.js" defer></script>
