--- a/public/styles/messagesDisplay.css
+++ b/public/styles/messagesDisplay.css
@@ -8,9 +8,21 @@
   }
 }
 
+.messagesContainer {
+  box-shadow: inset 0 50px 20px -25px #121e47;
+  display: flex;
+  flex-direction: column-reverse;
+  height: 100%;
+  padding-right: 15px;
+  overflow-y: scroll;
+  scrollbar-color: transparent transparent;
+}
+
 #messagesDisplay {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  z-index: -1;
 }
 
 .message, .author-message {
