--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -4,11 +4,36 @@
     <title>WebChat</title>
   </head>
   <body>
-    <ul>
-      <% oldMessages.forEach((oldMessage) => { %>
-        <li><%= oldMessage %></li>
-      <% }) %>
-    </ul>
+    <div>
+      <form>
+        <input type="text" placeholder="Insira seu nome">
+        <button type="submit">Salvar</button>
+      </form>
+    </div>
+
+    <div>
+      <h2>Usuários Conectados</h2>
+       <ul id ="usersLogged">
+
+       </ul>
+    </div>
+
+    <div>
+      <ul>
+        <% oldMessages.forEach((oldMessage) => { %>
+          <li data-testid="message"><%= oldMessage %></li>
+        <% }) %>
+      </ul>
+    </div>
+
+    <div>
+      <form>
+        <input type="text" placeholder="Messagem" data-testid="message-box">
+        <button type="submit" data-testid="send-button">Enviar</button>
+      </form>
+    </div>
+
+ 
 
     <script src="/socket.io/socket.io.js"></script>
     <script src='./js/chat.js'></script>
