--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,23 +5,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src='http://localhost:3000/socket.io/socket.io.js'></script>
+  <script src='socket.io/socket.io.js'></script>
   <title>Chat</title>
 </head>
 
 <body>
   <h1>Bem vindo ao chat</h1>
-  <ul id="messages"></ul>
-  <span data-testid="online-user">Usuario</span>
-  <form action="">
-    <input id="messageInput" autocomplete="off" data-testid="message-box" />
-    <button data-testid="send-button">Send</button>
-  </form>
+    <ul id='users-list'></ul>
 
-  <script>
-    const socket = io();
+    <ul id="messages"></ul>
 
-  </script>
+    <form action="">
+      <input id="message-input" autocomplete="off" data-testid="message-box" />
+      <button data-testid="send-button">Send</button>
+    </form>
+
+
+  <script src='index.js'> </script>
+
 </body>
 
 </html>
