feat: cria script para alterar o nome do user

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -5,9 +5,9 @@
   </head>
   <body>
     <div>
-      <form>
-        <input type="text" placeholder="Insira seu nome">
-        <button type="submit">Salvar</button>
+      <form id="changeCurrentNickname">
+        <input type="text" placeholder="Insira seu nome" data-testid="nickname-box" id="nickname-box">
+        <button type="submit" data-testid="nickname-button">Salvar</button>
       </form>
     </div>
 
