--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,9 @@
 <body>
   <section>Usuários online:
     <ul id="online-users">
-      <% clients.forEach(({ id, nickname }) => { %>
+      <!-- <% clients.forEach(({ id, nickname }) => { %>
         <li id="<%= id %>" data-testid="online-user"><%= nickname || id %></li>
-      <% }) %>
+      <% }) %> -->
     </ul>
     <input type="text" id="nickname-input" data-testid="nickname-box">
     <button id='nickname-button' data-testid="nickname-button">Mudar</button>
