--- a/views/webchat/index.ejs
+++ b/views/webchat/index.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src='http://localhost:3000/socket.io/socket.io.js'></script>
+  <script src='/socket.io/socket.io.js'></script>
   <link rel="stylesheet" href="http://localhost:3000/assets/style.css">
   <title>Chat Pv</title>
 </head>
@@ -32,9 +32,10 @@
 
     const socket = io('http://localhost:3000');
 
-      socket.on('newUser', () => {
-        const id = socket.id.substring(4);
-        socket.emit('newConnect', id);
+      socket.on('newUser', (id) => {
+        console.log(id);
+        const newId = id.substring(4);
+        socket.emit('newConnect', newId);
 
       });
 
