--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,13 @@
 </head>
 <body>
  <div id="chat">
-    <input id="username" type="text" name="nickname" placeholder="Digite seu usuario">
-    <div class="messages"></div>
+   <ul id="users"></ul>
+    <input data-testid="nickname-box" id="username" type="text" autocomplete="off" name="nickname" placeholder="Digite seu usuario">
+    <button id="nickButton" data-testid="nickname-button">Salvar usuario</button>
+    <div class="messages">
+      <ul class="listMessages">
+      </ul>
+    </div>
     <input type="text" id="message-teste" data-testid="message-box" name="message-box" placeholder="Digite sua mensagem aqui"/>
     <button id="button-teste" data-testid="send-button" name="send-button">Enviar</button>
   </div>
