--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <title>Webchat</title>
 </head>
 <body>
- <div id="chat">
+ <div class="chat">
    <ul id="users"></ul>
     <input data-testid="nickname-box" id="username" type="text" autocomplete="off" name="nickname" placeholder="Digite seu usuario">
     <button id="nickButton" data-testid="nickname-button">Salvar usuario</button>
